admission/ValidatingAdmissionPolicy/policies/serviceaccounts-write/clusterroles/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: clusterrole-serviceaccounts-write
  annotations:
    security.kubeapt.io/displayName: 'Serviceaccounts Write'
    security.kubeapt.io/description: ClusterRoles must not grant create/update/patch/delete on ServiceAccounts without strict
    security.kubeapt.io/resource: ClusterRoles
    security.kubeapt.io/severity: "9"
    security.kubeapt.io/remediation: "Remove create/update/patch/delete on serviceaccounts. Fields: rules[*].resources, rules[*].verbs."
    policies.kolteq.com/validatingAdmissionPolicy: c2751a05-1009-572f-bb3d-6804d2d573b5
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - rbac.authorization.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - clusterroles
  validations:
  - expression: |
      !has(object.rules) || object.rules.all(r,
        !(has(r.apiGroups) && has(r.resources) && has(r.verbs) &&
          r.apiGroups.exists(ag, ag == "") &&
          r.resources.exists(res, res == "serviceaccounts") &&
          r.verbs.exists(v, v in ["create","update","patch","delete"]))
      )
    message: |
      ClusterRoles must not grant create/update/patch/delete on ServiceAccounts without strict scoping.
